<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/display"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="end">
        </TextView>
        <TextView
            android:id="@+id/base"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="end">
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/one">
                </Button>
                <Button
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/four">
                </Button>
                <Button
                    android:id="@+id/seven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/seven">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/two">
                </Button>
                <Button
                    android:id="@+id/five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/five">
                </Button>
                <Button
                    android:id="@+id/eight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/eight">
                </Button>
                <Button
                    android:id="@+id/zero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/zero">
                </Button>

                <Button
                    android:id="@+id/bin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="49dp"
                    android:text="@string/bin"
                    android:textSize="20sp"></Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/three">
                </Button>
                <Button
                    android:id="@+id/six"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/six">
                </Button>
                <Button
                    android:id="@+id/nine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/nine">
                </Button>
                <Button
                    android:id="@+id/plusminus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/plusminus">
                </Button>
                <Button
                    android:id="@+id/dec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="49dp"
                    android:textSize="20sp"
                    android:text="@string/dec">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="15dp">
                <Button
                    android:id="@+id/clr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/clr">
                </Button>
                <Button
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/add">
                </Button>
                <Button
                    android:id="@+id/sub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/sub">
                </Button>
                <Button
                    android:id="@+id/mul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/mul">
                </Button>
                <Button
                    android:id="@+id/div"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/div">
                </Button>
                <Button
                    android:id="@+id/equ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/equ">
                </Button>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/state"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="start">
        </TextView>
        <TextView
            android:id="@+id/stack"
            android:layout_width="150dp"
            android:gravity="start"
            android:layout_height="60dp">
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>